--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jest-environment-jsdom": "^29.3.1",
     "msw": "^0.49.1",
     "ts-jest": "^29.0.3",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "whatwg-fetch": "^3.6.2"
   }
 }
